# git-course

./: .gitignore
Hello_github/: CMakeLists.txt  main.cpp
Score_of_string/: CMakeLists.txt  main.cpp
Score_of_string/Debug/: CMakeCache.txt
build-hello_wold-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-hello_wold-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-a42bbf0ab7480c2224d3.json  cmakeFiles-v1-1ff419c29d136344e15b.json  codemodel-v2-1c2f0318daf183c6e258.json  directory-.-Debug-8edb063202d9a55dc60b.json  index-2024-04-13T19-04-48-0418.json  target-hello_wold-Debug-96928072fcb649a9ca90.json
build-hello_wold-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-hello_wold-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.A8EB845E7C967085.idx  main.cpp.D6C5395ED9DC5541.idx
hello_cmake/: Cmakelists.txt
hello_cmake/Hello_github/: CMakeLists.txt  main.cpp
hello_cmake/src/: main.cpp
hello_world/: .gitignore  CMakeLists.txt
